--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.4",
     "vite": "^2.6.4",
-    "vite-plugin-html": "^2.1.1"
+    "vite-plugin-html": "^2.1.1",
+    "vite-plugin-radar": "^0.5.0"
   }
 }
