--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "unplugin-vue-components": "^0.22.4",
     "vite": "^2.6.4",
     "vite-plugin-html": "^2.1.1",
-    "vite-plugin-radar": "^0.5.0"
+    "vite-plugin-radar": "^0.5.0",
+    "vite-plugin-rewrite-all": "^1.0.0"
   }
 }
